Final_front_end

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
         <data android:scheme="com.deija.AIDER"/>
+        <data android:scheme="exp+aider"/>
       </intent-filter>
     </activity>
   </application>
